fix swagger for new endpoints
