# docs/swagger.json
@@ -943,6 +943,94 @@
                 }
             }
         },
+        "/equipment/sn-like/{sn}/manufacturer/{manufacturer_id}/device/{device_id}": {
+            "get": {
+                "description": "get equipment by manufacturer id like serial number and device id from the database",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "equipment"
+                ],
+                "summary": "get equipment by manufacturer id like serial number and device id",
+                "parameters": [
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "description": "manufacturer id",
+                        "name": "manufacturer_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "description": "device id",
+                        "name": "device_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "serial number",
+                        "name": "sn",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "description": "limit",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "description": "offset",
+                        "name": "offset",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/models.JsonResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "MSG": {
+                                            "$ref": "#/definitions/models.Equipment"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.JsonResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.JsonResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/equipment/sn/{sn}/device/{device_id}": {
             "get": {
                 "description": "get equipment by device id and serial number from the database",
@@ -1506,6 +1594,11 @@
                     "description": "SerialNumber is a string for equipment serial number",
                     "type": "string",
                     "example": "SN-123456"
+                },
+                "status": {
+                    "description": "Status is a string for equipment status either active or inactive",
+                    "type": "string",
+                    "example": "active|inactive"
                 }
             }
         },
@@ -1513,17 +1606,17 @@
             "description": "JsonResponse is a struct for response JSON message",
             "type": "object",
             "properties": {
-                "Status": {
-                    "description": "Status is a string for response status",
-                    "type": "string",
-                    "example": "SUCCESS|ERROR"
+                "Action": {
+                    "description": "Action is a string for response action",
+                    "type": "string"
                 },
                 "MSG": {
                     "description": "Message is an interface for response message can be string, models.DeviceType, models.Manufacturer, models.Equipment"
                 },
-                "Action": {
-                    "description": "Action is a string for response action",
-                    "type": "string"
+                "Status": {
+                    "description": "Status is a string for response status",
+                    "type": "string",
+                    "example": "SUCCESS|ERROR"
                 }
             }
         },
